--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,21 +114,32 @@ p {
     padding-right: 13rem; } }
 
 .description {
-  margin-bottom: 2.4rem; }
+  margin: 7.5rem 2.4rem 2.4rem; }
 
 .description__text {
   margin: 0; }
 
 @media screen and (min-width: 768px) {
   .description {
+    display: flex;
+    align-items: center;
     margin-right: 3.6rem; }
+  .description__header {
+    margin: 0 12rem 0 0; }
   .description__content-container {
     display: flex;
     align-items: center; } }
 
 @media screen and (min-width: 1024px) {
+  .description__header {
+    margin: 0; }
   .description {
-    margin-right: 2.7rem; }
+    padding: 0 10rem;
+    margin: 0;
+    display: initial;
+    align-self: center; }
+  .description__text {
+    margin-top: 2.7rem; }
   .description__content-container {
     display: initial; } }
 
